objects/Veda_General_Messages__c.object
<CustomObject>
    <fields>
        <fullName>Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application</label>
        <referenceTo>genesis__Applications__c</referenceTo>
        <relationshipName>GeneralMessagess</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Possible_Match__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Possible Match</label>
        <referenceTo>Veda_Possible_Match__c</referenceTo>
        <relationshipName>GeneralMessagess</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Veda_Comprehensive__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Veda Comprehensive</label>
        <referenceTo>Veda_Comprehensive__c</referenceTo>
        <relationshipLabel>Veda General Messagess</relationshipLabel>
        <relationshipName>Veda_General_Messagess</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>code__c</fullName>
        <label>code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>message__c</fullName>
        <label>message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Veda General Messages</label>
    <nameField>
        <label>General Messages Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Veda General Messagess</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>